<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:screenOrientation="portrait"
        tools:context=".MainScreen">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="@dimen/layout_marginStart"
                  android:layout_marginEnd="@dimen/layout_marginEnd"
                  android:layout_marginLeft="@dimen/layout_marginLeft"
                  android:layout_marginRight="@dimen/layout_marginRight"
                  android:orientation="vertical"
                  android:layout_centerVertical="true">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/layout_marginTop"
                  android:text="@string/whatyouwant"
                  android:textSize="32sp"
                  android:layout_gravity="center_horizontal"/>

        <Button android:id="@+id/btn_main_registercar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/regcar"/>

        <Button android:id="@+id/btn_main_listcars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/showregcars"/>

        <Button android:id="@+id/btn_main_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/about"/>

        <Button android:id="@+id/btn_main_signout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/signout"/>

    </LinearLayout>

</RelativeLayout>