<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:screenOrientation="portrait"
        tools:context=".EditCarScreen">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="@dimen/layout_marginStart"
                  android:layout_marginEnd="@dimen/layout_marginEnd"
                  android:layout_marginLeft="@dimen/layout_marginLeft"
                  android:layout_marginRight="@dimen/layout_marginRight"
                  android:orientation="vertical"
                  android:layout_centerVertical="true">

        <EditText android:id="@+id/edt_edtcar_model"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/layout_marginTop"
                  android:hint="@string/model"
                  android:padding="@dimen/padding"/>

        <EditText android:id="@+id/edt_edtcar_fuel"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/layout_marginTop"
                  android:hint="@string/fuel"
                  android:padding="@dimen/padding"/>

        <EditText android:id="@+id/edt_edtcar_engine"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/layout_marginTop"
                  android:hint="@string/engine"
                  android:padding="10dp"/>

        <EditText android:id="@+id/edt_edtcar_price"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/layout_marginTop"
                  android:hint="@string/price"
                  android:padding="@dimen/padding"/>

        <Button android:id="@+id/btn_edtcar_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_marginTop"
                android:layout_gravity="center_horizontal"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:textSize="21sp"/>

        <Button android:id="@+id/btn_edtcar_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_marginTop"
                android:layout_gravity="center_horizontal"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textSize="21sp"/>

    </LinearLayout>

</RelativeLayout>