<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:screenOrientation="portrait"
        tools:context=".RegisterLoginScreen">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="@dimen/layout_marginStart"
                  android:layout_marginEnd="@dimen/layout_marginEnd"
                  android:layout_marginLeft="@dimen/layout_marginLeft"
                  android:layout_marginRight="@dimen/layout_marginRight"
                  android:orientation="vertical"
                  android:layout_centerVertical="true">

        <EditText android:id="@+id/edt_reguser_email"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/layout_marginTop"
                  android:hint="@string/email"
                  android:padding="@dimen/padding"/>

        <EditText android:id="@+id/edt_reguser_password"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/layout_marginTop"
                  android:inputType="textPassword"
                  android:hint="@string/password"
                  android:padding="@dimen/padding"/>

        <EditText android:id="@+id/edt_reguser_passconf"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/layout_marginTop"
                  android:inputType="textPassword"
                  android:hint="@string/conf_password"
                  android:padding="@dimen/padding"/>

        <Button android:id="@+id/btn_reguser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_marginTop"
                android:layout_gravity="center_horizontal"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textSize="21sp"/>

    </LinearLayout>

</RelativeLayout>