<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:screenOrientation="portrait"
        tools:context=".AboutScreen">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="@dimen/layout_marginStart"
                  android:layout_marginEnd="@dimen/layout_marginEnd"
                  android:layout_marginLeft="@dimen/layout_marginLeft"
                  android:layout_marginRight="@dimen/layout_marginRight"
                  android:orientation="vertical"
                  android:layout_centerVertical="true">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/layout_marginTop"
                  android:text="@string/app_name"
                  android:textSize="20sp"
                  android:textColor="@android:color/black"
                  android:textStyle="bold"
                  android:layout_gravity="center_horizontal"/>

        <ImageView android:layout_width="@dimen/layout_width_logo"
                   android:layout_height="@dimen/layout_height_logo"
                   android:src="@drawable/car"
                   android:layout_gravity="center_horizontal"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/layout_marginTop"
                  android:text="@string/dev_one"
                  android:textSize="20sp"
                  android:textColor="@android:color/black"
                  android:textStyle="bold"
                  android:layout_gravity="center_horizontal"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/layout_marginTop"
                  android:text="@string/dev_two"
                  android:textSize="20sp"
                  android:textColor="@android:color/black"
                  android:textStyle="bold"
                  android:layout_gravity="center_horizontal"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/layout_marginTop"
                  android:text="@string/app_version"
                  android:textSize="20sp"
                  android:textColor="@android:color/black"
                  android:textStyle="bold"
                  android:layout_gravity="center_horizontal"/>
        
    </LinearLayout>

</RelativeLayout>