<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                          android:layout_width="match_parent"
                                          android:layout_height="wrap_content">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/layout_marginStart"
                    android:layout_marginEnd="@dimen/layout_marginEnd"
                    android:layout_marginLeft="@dimen/layout_marginLeft"
                    android:layout_marginRight="@dimen/layout_marginRight">

        <TextView android:id="@+id/txv_listcar_id"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:visibility="invisible"/>

        <TextView android:id="@+id/txv_listcar_model"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/model"
                  android:textSize="20sp"
                  android:textColor="@android:color/black"
                  android:textStyle="bold"
                  android:layout_gravity="center_horizontal"
                  android:layout_alignParentStart="true"
                  android:layout_marginLeft="@dimen/layout_list_model"
                  android:layout_marginStart="@dimen/layout_list_model"
                  android:layout_alignParentLeft="true"/>

        <TextView android:id="@+id/txv_listcar_fuel"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/layout_marginTop"
                  android:text="@string/fuel"
                  android:textSize="15sp"
                  android:layout_gravity="center_horizontal"
                  android:layout_alignParentStart="true"
                  android:layout_marginLeft="@dimen/layout_list_fuel"
                  android:layout_marginStart="@dimen/layout_list_fuel"
                  android:layout_alignParentLeft="true"/>

        <TextView android:id="@+id/txv_listcar_engine"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/engine"
                  android:textSize="15sp"
                  android:layout_gravity="center_horizontal"
                  android:layout_alignParentRight="true"
                  android:layout_alignParentEnd="true"
                  android:layout_marginRight="@dimen/layout_list_engine"
                  android:layout_marginEnd="@dimen/layout_list_engine"
                  android:layout_alignTop="@+id/txv_listcar_model"
                  android:layout_marginTop="@dimen/layout_marginTop"/>

        <TextView android:id="@+id/txv_listcar_price"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/layout_marginTop"
                  android:text="@string/price"
                  android:textSize="15sp"
                  android:layout_gravity="center_horizontal"
                  android:layout_alignParentRight="true"
                  android:layout_alignParentEnd="true"
                  android:layout_marginRight="@dimen/layout_list_price"
                  android:layout_marginEnd="@dimen/layout_list_price"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>